# nixy

./: .gitignore  README.md  pyproject.toml
nixy/nim/: config.nims  nixy.nimble
nixy/nim/src/: nixy.nim
nixy/nim/src/nixy/cli/: cmd.nim  core.nim  nixy.nim  pkg.nim  postgresql.nim  python.nim
nixy/nim/src/nixy/lib/: config.nim  core.nim  errors.nim  nixy.nim  path.nim  postgresql.nim  python.nim  store.nim  utils.nim
nixy/nim/src/nixy/lib/module/: cmd.nim  cmd_python.nim  nixy.nim  pkg.nim  postgresql.nim  python.nim  python_utils.nim  types.nim
